# image-streaming

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: udp_client.hpp  udp_server.hpp  webcam.hpp
src/: client.cpp  main.cpp  server.cpp  udp_client.cpp  udp_server.cpp  webcam.cpp
